# meu_apk_projeto

./: LICENSE  pyproject.toml
.github/workflows/: build.yml
